@@ -10,6 +10,8 @@
 Update: May 19th 2016
 ==================================================
 ->Observed a few cases where the normalized chi^2 (normchi2) value of a slice fit was INF or NaN, now code checks for this and sets normchi2 = -1 if this occurs.  This ensures the normchi2 distribution can always be drawn in ROOT.
+->Added new utility function Uniformity::ceilPowerTen for recursively determining the smallest power of 10 larger than an input variable
+->Uniformity::VisualizeUniformity::storeCanvasHistoSegmented() will now create a TCanvas where the y-axis is the same for every pad using the range [1e-1, Uniformity::ceilPowerTen]
 
 Update: May 18th 2016
 ==================================================
